# ltc-timecode-generator

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile.gui-build  Dockerfile.i386-build  README.md  README.org  build-32bit.sh  ltc-gen-test-output.txt  metadata.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
audio-core/: Cargo.toml
audio-core/src/: lib.rs
ltc-gui/: Cargo.toml  Cross.toml
ltc-gui/src/: app.rs  main.rs  theme.rs
ltc-gui/src/widgets/: clapper.rs  clock.rs  mod.rs  settings.rs  status.rs
scripts/: sync-version.js
src/: App.tsx  index.css  ltcGenerator.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri-32bit/: Cargo.toml  build.rs  tauri.conf.json
src-tauri-32bit/src/: main.rs
src-tauri/src/: lib.rs
src/components/: ClapperSlate.tsx  FooterStatusBar.tsx  TimecodeSettings.tsx
src/utils/: audioBackend.ts
