[package]
name = "audio-core"
version = "0.2.0"
description = "Tauri-free LTC timecode + cpal audio core shared by the v2 and v1 (32-bit) frontends."
authors = ["Daidalos"]
edition = "2021"
rust-version = "1.70.0"

[lib]
name = "audio_core"
crate-type = ["rlib"]

[dependencies]
cpal = "0.18"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
